--- a/index.html
+++ b/index.html
@@ -9,39 +9,69 @@
 	<body>
 		<div id="target"></div>
 		<script>
-			//definitely don't edit this file here
+
+			//static attributes for <objects>
+			const staticAttributes = {
+				"type":"text/plain",
+				"width":"100%",
+				"height": "100px",
+			}
+
+			//iterated attributes for <objects>
+			const iteratedAttributes = {
+				"data": {
+					"pro":"text/graf-",
+					"epi":".txt"
+				},
+				"id": {
+					"pro":"object-",
+					"epi":""
+				}
+			}
+
 			let i = 1;
 			while(i < 11) {
 				//creating some objects
 				let objectTag = document.createElement("object");
-				objectTag.setAttribute("type", "text/plain");
-				objectTag.setAttribute("width", "100%");
-				objectTag.setAttribute("height", "100px");
-				objectTag.setAttribute("data", "text/graf-" + i +".txt");
-				objectTag.setAttribute("id", "object-" + i);
-				document.getElementById("target").appendChild(objectTag);
-				console.log("done this " + i + " times");
-				i++;
-			}
-			window.onload = function() {
-				//adding a header if those objects exist
-				let j = 0;
-				let lastOffset = 0;
-				let objects = document.getElementsByTagName("object");
 
+				//adding static attributes
+				for (static in staticAttributes) {
+					objectTag.setAttribute(static, staticAttributes[static]);
+				}
+
+				//addint iterated attributes
+				for (iterated in iteratedAttributes) {
+					objectTag.setAttribute(iterated, iteratedAttributes[iterated]["pro"] + i + iteratedAttributes[iterated]["epi"]);
+				}
+
+				//inserting objects into the page
+				document.getElementById("target").appendChild(objectTag);
+				i++;
+
+			}
+
+			//make sure the object have content
+			window.onload = function() {
+				let j = 1;
+
+				//get the <object> elements and iterate through them 
+				let objects = document.getElementsByTagName("object");
 				for (object of objects) {
-					j++;
-					// console.log ("lastOffset for iteration " + j + " is " + lastOffset );
-					// console.log ("initial object.offsetTop for iteration " + j + " is " + object.offsetTop );
-					console.log("object.offsetHeight for iteration " + j  + " is " + object.offsetHeight);
+
+					// assumes objects less than 100px are empty
 		 			if (object.offsetHeight > 99) {
+
+		 				//create header and add text 
 		 				let headerTag = document.createElement("h1");
-		 				let headerText = document.createTextNode("graf-"+j+".txt");
+		 				let headerText = document.createTextNode("content from graf-"+j+".txt");
 		 				headerTag.appendChild(headerText);
+
+		 				//insert header
 		  				document.getElementById("target").insertBefore(headerTag, object);
-		  				// lastOffset = object.offsetTop;
-		  				// console.log("just reset lastOffset to " + object.offsetTop);
 		 			}
+
+		 			//turn crank
+		 			j++;
 		 		}
 		 	}
 		</script>
