don't edit this file
mostly just to display the commit comment

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 	<body>
 		<div id="target"></div>
 		<script>
-
+			//definitely don't edit here
+			//but I also added comments to explain what's going on
+			
 			//static attributes for <objects>
 			const staticAttributes = {
 				"type":"text/plain",
@@ -72,7 +74,7 @@
 		  				document.getElementById("target").insertBefore(headerTag, object);
 		 			}
 
-		 			//advance the counter
+		 			//advance the counter (iterating through objects turns the crank)
 		 			j++;
 		 		}
 		 	}
